Update Dockerfile
Former-commit-id: f888cb96766ef7599287e2074aa58ac3f01760ef
Former-commit-id: 91f3ffa8ac83b6d5f4c7ee3ffdccd596c1d2b282